syntax = "proto3";

package io.mystore.shipping.action;

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/mystore/shipping/entity/shipping_entity.proto";

service ShippingToOrderSkuItem {
  option (kalix.codegen) = {
    action : {}
  };

  rpc OnOrderCreated(entity.OrderCreated) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "shipping"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "shipping"
    };
  }
}
